Replace legacy text coloring with minimessage