@@ -9,7 +9,6 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
@@ -110,6 +109,6 @@ public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
             return null;
         }
 
-        return Arrays.asList();
+        return List.of();
     }
 }
